--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Cython>=0.29.28
-cmake>=3.22.3    
-numpy>=1.22.3
+numpy
+opencv-python
+scipy
+matplotlib
+torch
+torchvision
+insightface
+onnxruntime-gpu
